<resources>
    <string name="app_name">Salve as Vogais</string>
    <string name="vowels">[AÂÃÁEÉÊIÍOÓÕÔUÚ]</string>
    <string name="a">A</string>
    <string name="e">E</string>
    <string name="i">I</string>
    <string name="o">O</string>
    <string name="u">U</string>
    <string name="back">back</string>
    <string name="confirm">Confirmar</string>
    <string name="clear">Apagar</string>
    <string name="continuar">Continuar</string>
</resources>