<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/turquoise"
    tools:context=".presentation.card.CardActivity">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/letter_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/a"
        android:src="@drawable/letter_a"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/letter_e"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/letter_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/e"
        android:src="@drawable/letter_e"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/letter_i"
        app:layout_constraintStart_toEndOf="@id/letter_a" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/letter_i"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/i"
        android:src="@drawable/letter_i"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/letter_o"
        app:layout_constraintStart_toEndOf="@id/letter_e" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/letter_o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/o"
        android:src="@drawable/letter_o"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/letter_u"
        app:layout_constraintStart_toEndOf="@id/letter_i" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/letter_u"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/u"
        android:src="@drawable/letter_u"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/letter_o" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/green"
        android:fontFamily="@font/coming_soon"
        android:text="@string/confirm"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:visibility="visible"
        app:icon="@drawable/ic_check"
        app:layout_constraintBottom_toTopOf="@id/letter_a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/clear"
        app:layout_constraintTop_toBottomOf="@id/word" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/coming_soon"
        android:text="@string/clear"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:visibility="visible"
        app:icon="@drawable/ic_trash"
        app:layout_constraintBottom_toBottomOf="@id/confirm"
        app:layout_constraintEnd_toStartOf="@id/confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/confirm" />

    <TextView
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:letterSpacing="0.3"
        android:textSize="62sp"
        app:layout_constraintBottom_toTopOf="@id/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animationView"
        tools:text="______" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />

</androidx.constraintlayout.widget.ConstraintLayout>